single-prd- items align fix

--- a/src/app/routes/Shop/components/shop-hero/shop-hero.component.scss
+++ b/src/app/routes/Shop/components/shop-hero/shop-hero.component.scss
@@ -57,10 +57,10 @@
 .plan {
   background-color: #f3f3f3;
   color: black;
-  padding: 20px 10px 20px 10px;
-  border-radius: 10px;
+  padding: 0.5rem;
+  border-radius: 18px;
   font-weight: 500;
-  font-size: 19px;
+  font-size: 1.25rem;
 }
 .activated {
   background-color: #3246d3 !important;
@@ -84,28 +84,13 @@
   margin-right: 20px;
   margin-left: 20px;
 }
-.row {
-  border-bottom: 1px solid #d2d2d2;
-}
-.row-h {
+
+.producer-h {
+  margin-bottom: 1rem;
   font-weight: 900;
   font-size: 16px;
 }
-.row-p {
-  font-size: 14px;
-  font-weight: 700;
-  color: black;
-}
-.row-p-2 {
-  font-size: 14px;
-  font-weight: 700;
-  color: black;
-}
-.row-p-3 {
-  font-size: 14px;
-  color: black;
-  font-weight: 700;
-}
+
 .row-p-4 {
   font-size: 14px;
   font-weight: 800;
@@ -113,8 +98,8 @@
 }
 .price-1 {
   font-weight: 900;
-    font-size: 1.45rem;
-    color: black;
+  font-size: 1.45rem;
+  color: black;
 }
 .price-2 {
   color: rgba(110, 110, 110, 0.7058823529);
@@ -123,8 +108,8 @@
   margin-left: 0.2rem;
   font-weight: 600;
 }
-.row-btn{
-  margin-top: -0.5rem
+.row-btn {
+  margin-top: -0.5rem;
 }
 .btn {
   border-radius: 10px;
@@ -149,23 +134,23 @@
 .p-plan {
   margin-top: -10px;
 }
-.price-box{
+.price-box {
   display: flex;
   margin-right: 3.5rem;
   align-items: center;
 }
-.off-price{
-  background-color: #17EE9D;
-    font-size: 0.7rem;
-    padding: 4px 12px 0px 12px;
-    border-radius: 30px;
-    font-weight: 600;
-    margin-bottom: 0.3rem;
-    scale: 0.9;
+.off-price {
+  background-color: #17ee9d;
+  font-size: 0.7rem;
+  padding: 4px 12px 0px 12px;
+  border-radius: 30px;
+  font-weight: 600;
+  margin-bottom: 0.3rem;
+  scale: 0.9;
 }
 .smooth-width {
-display: flex;
-align-items: center;
+  display: flex;
+  align-items: center;
 }
 // ====================[بنر]=============
 .all {
@@ -214,7 +199,6 @@ align-items: center;
   background-color: #f5f5f5;
   height: 94px;
   border-radius: 32px;
-  margin-left: 10px;
   min-width: 490px;
 }
 .body {
@@ -228,15 +212,15 @@ align-items: center;
   display: flex;
   align-items: center;
 }
-.img-dolar{
+.img-dolar {
   position: absolute;
   transform: translate(86px, 3px);
 }
 // =================[انیمیشن کارت]===============
-.smooth{
+.smooth {
   width: 100px;
 }
-.price-animation{
+.price-animation {
   animation: display 0.4s ease-in forwards;
 }
 @keyframes display {
@@ -257,53 +241,52 @@ align-items: center;
   }
 }
 // <!-- ===========================[رسپانسیو]============== -->
-.hero-mobile{
+.hero-mobile {
   position: relative;
 }
-.row-click{
+.row-click {
   position: absolute;
   margin-right: 2rem;
   z-index: 20;
-
 }
-.btn-m{
+.btn-m {
   padding: 5px 15px 5px 13px;
   border-radius: 30px;
-  background-color: #E7E7E7;
+  background-color: #e7e7e7;
 }
-.click-m{
+.click-m {
   font-size: 0.9rem;
 }
-.plan-mobile{
+.plan-mobile {
   background-color: white;
   border-radius: 49px 49px 0px 0px;
-    transform: translate(0px, -37px);
+  transform: translate(0px, -37px);
 }
-.bot-h-mobile{
+.bot-h-mobile {
   font-size: 1.1rem;
   font-weight: 700;
   color: black;
 }
-.row-rating-mobile{
+.row-rating-mobile {
   scale: 0.7;
   margin-right: -3.5rem;
 }
-.p-rating-m{
+.p-rating-m {
   display: inline-flex;
-  color: #B6B6B6;
+  color: #b6b6b6;
 }
-.titile{
+.titile {
   padding-top: 1.5rem;
   padding-right: 2rem;
   margin-bottom: 2rem;
 }
-.bazdid-m{
+.bazdid-m {
   padding: 0px 5px 0px 5px;
   border-right: 1px solid;
   border-left: 1px solid;
   margin: 0px 7px 0px 7px;
 }
-.row-title-3{
+.row-title-3 {
   margin: 4rem 1.5rem 1rem 1rem;
   font-size: 16px;
   font-weight: 600;
@@ -312,84 +295,84 @@ drag-scroll {
   width: 33rem;
 }
 // <!-- ================[فروشنده]============ -->
-.row-p-mobile{
+.row-p-mobile {
   color: black;
   font-weight: 700;
 }
 .row-p-mobile2 {
-  color: #0F9B66;
+  color: #0f9b66;
   font-weight: 700;
 }
-.divider{
+.divider {
   margin-top: 2rem;
   margin-bottom: 2rem;
-  border-bottom: 1px solid #D2D2D2;
+  border-bottom: 1px solid #d2d2d2;
   width: 100%;
 }
 // <!-- ===========================[بنر]============== -->
 .all-mobile {
-  background-color: #F5F5F5;
-    margin: 0rem 2.5rem 0rem 2.5rem;
-    border: #E9E9E9 1px solid;
-    border-radius: 17px;
+  background-color: #f5f5f5;
+  margin: 0rem 2.5rem 0rem 2.5rem;
+  border: #e9e9e9 1px solid;
+  border-radius: 17px;
 }
-.baner-mobile{
+.baner-mobile {
   background-image: url(../../../../../assets/img/dolor.svg);
 }
-.logo-mobile{
+.logo-mobile {
   position: absolute;
-    width: 5.5rem;
-    transform: translate(-3px, -16px);
-    aspect-ratio: 3/3;
+  width: 5.5rem;
+  transform: translate(-3px, -16px);
+  aspect-ratio: 3/3;
 }
-.body-mobile{
+.body-mobile {
   font-size: 0.7rem;
-    color: black;
-    padding: 0.6rem;
+  color: black;
+  padding: 0.6rem;
 }
 // <!-- ===========================[باکس پرایس]============== -->
 
-.box-price-row-mobile{
-  background-color: #F6F6F6;
+.box-price-row-mobile {
+  background-color: #f6f6f6;
   border-radius: 23px 23px 0px 0px;
   position: fixed;
-    z-index: 100;
-    top: 0;
-    transform: translateY(calc(100vh - 92px));
-    width: 100vw;
-
-}.box-price-mobile{
+  z-index: 100;
+  top: 0;
+  transform: translateY(calc(100vh - 92px));
+  width: 100vw;
+}
+.box-price-mobile {
   display: inline-flex;
   align-items: center;
   margin-top: 0.5rem;
 }
-.box-price-btn-mobile{
+.box-price-btn-mobile {
   display: flex;
   align-items: center;
 }
-.btn-mobile{
+.btn-mobile {
   background-color: #3246d3;
   padding: 10px 35px 10px 35px;
   color: white;
   font-weight: 700;
   margin-right: 0.5rem;
-  border-radius: 29px
+  border-radius: 29px;
 }
-.price-1-m{
-  background-color: #17EE9D;
+.price-1-m {
+  background-color: #17ee9d;
   padding: 3px 16px 0px 16px;
   border-radius: 14px;
   font-weight: 400;
-  margin-bottom: 8px
+  margin-bottom: 8px;
 }
-.price-2-m{
-color: #B7B7B7;
-font-size: 1.3rem;
-font-weight: 500;
-margin-left: 0.5rem;
-margin-right: 0.5rem;
+.price-2-m {
+  color: #b7b7b7;
+  font-size: 1.3rem;
+  font-weight: 500;
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
 }
-.price-3-m{
+.price-3-m {
   font-size: 2.4rem;
   color: black;
   font-weight: 900;
